--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,11 @@
+/* tags */
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
-}
-
-.img-responsive{
-  width: 100%;
-  max-width: 100px;
-  height: auto;
-}
-
-.menu {
-  position: relative;
-  display: inline-block;
+  background: linear-gradient(#ffffff, #fadadd);
 }
 
 a {
@@ -24,9 +19,105 @@ label {
 nav a {
   display: inline-block;
   margin: 1em;
+  overflow: auto;
 }
 
 form div {
   margin: 1em;
   display: inline-block;
 }
+
+header {
+    background-image: url(./public/bg-scented.jpg);
+    width: 100%;
+    padding-bottom: 40%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+i {
+  font-size: 2em;
+}
+
+/* cart {
+  display: inline-block;
+  margin: 1em;
+} */
+
+/* ids */
+/* 
+#backgroundimage {
+  background-image: url("bg-scented.jpg");
+  width: 100vw;
+  height: 100vh; 
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  position: relative;
+}  */
+
+
+#products {
+  margin: 2em;
+}
+
+#cart-link {
+  height: 50px;
+  width: 50px;
+}
+
+
+#selectedProduct{
+  text-align: center;
+}
+
+#container {
+  width: 20px;
+  height: 20px;
+}
+
+#container img {
+  width: 100%;
+}
+  /* classes */
+
+.img-responsive{
+  height: 200px;
+  width: 200px;
+  transition: box-shadow 0.5s ease;
+  border-radius: 3px;
+}
+  
+.menu {
+  position: relative;
+  display: inline-block;
+}
+
+.singleProduct{
+  margin: 1em;
+}
+
+.singleProduct img {
+  height: 200px;
+  width: 200px;
+  transition: box-shadow 0.5s ease;
+  border-radius: 3px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.wrap {
+  flex-wrap: wrap;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.center {
+  justify-content: center;
+}
+  
