--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: sans-serif;
   background: linear-gradient(#ffffff, #fadadd);
+  font-family: 'Roboto', sans-serif;
   /* height: 100vh;
   padding: 0;
   margin: 0;
@@ -56,11 +57,12 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
 }
-/* border: none;
-padding: 0.5rem 0.75rem;
-font-size: 1rem;
-box-shadow: 3px 3px #80808063;
-cursor: pointer; */
+
+p {
+  font-size: 14px;
+  margin: 0;
+}
+
 
 button {
   border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
@@ -77,6 +79,56 @@ button {
   margin: 2em;
 }
 
+#aProduct {
+  align-items:left;
+}
+
+#aProduct #reviews {
+  width: 50%;
+}
+
+#aProduct p {  
+  margin: 1% 15%;
+  float: left;
+}
+
+#aProduct li {  
+  margin: 1% 15%;
+  float: left;
+}
+
+#aProduct h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#aProduct h4 {
+  display: block;
+  margin-block-start: 1.33em;
+  margin-block-end: 1.33em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#aProduct h5 {
+  display: block;
+  font-size: 0.83em;
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: center;
+}
+
 
 #selectedProduct{
   text-align: center;
@@ -85,15 +137,26 @@ button {
 #container {
   width: 50px;
   height: 50px;
+  padding: 2em;
 }
 
 #container img {
   width: 62%;
 }
 
-
-
   /* classes */
+.previous {
+  color: black;
+  position: absolute;
+  left: 14px;
+}
+
+.next{
+  color: black;
+  position: absolute;
+  right: 14px;
+}
+
 .nav-item {
   height: 1.5em;
   margin: 0 1.5em 0 0;
@@ -101,8 +164,8 @@ button {
 
 .nav-item a {
   text-decoration: none;
-  font-size: 1.5em;
-  padding: 5px;
+  font-size: 1em;
+  padding: 4px;
 }
 
 .nav-item a:hover {
@@ -119,30 +182,38 @@ button {
 }
 
 .thumbnail {
-  display: table-cell;
-  padding: 4px 0 5px;
-  height: 242px;
+  padding: 10px;
+  height: 337px;
   width: 200px;
-  margin-bottom: 20px;
-  margin-right: 10px;
   line-height: 1.42857;
-  background-color: #fff;
-  border: 1px solid #ddd;
   border-radius: 4px;
+  box-shadow: 2px 2px 10px #ccc;
+  background-color: #fff;
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
   transition: border 0.2s ease-in-out;
+  text-align: center;
+  cursor: pointer;
+}
 
+.thumbnail:hover {
+  background-color: lightgrey;
+  transition: background-color 0.2s;
 }
 
 .thumbnail img {
-  display: table-cell;
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  vertical-align: middle;
+  padding-top: 5px;
+  height: 150px;
+  width: 150px;
+  border-radius: 90px;
+}
+
+.col-xs-6 {
+  padding: 0;
+}
+
+.col-xs-6 a {
+  margin-bottom: 0;
 }
   
 .menu {
@@ -164,6 +235,8 @@ button {
 .row {
   display: flex;
   flex-direction: row;
+  padding: 10px;
+  justify-content: center;
 }
 
 .wrap {
@@ -173,9 +246,152 @@ button {
 .column {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .center {
   justify-content: center;
 }
+
+.btn-quantity{
+  border: whitesmoke;
+  color: black;
+  padding: 3px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
   
+.shopping-cart {
+  width: 750px;
+  margin: 80px auto;
+  background: #FFFFFF;
+  box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  height: 60px;
+  padding: 20px 30px 50px;
+  color: #5E6977;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.title h2 {
+  border-bottom: 1px solid #E1E8EE;
+  font-size: larger;
+}
+ 
+.item {
+  padding: 20px 30px;
+  height: 120px;
+  display: flex;
+}
+ 
+.item:nth-child(3) {
+  border-top:  1px solid #E1E8EE;
+  border-bottom:  1px solid #E1E8EE;
+}
+
+.buttons {
+  position: relative;
+  padding-top: 30px;
+  margin-right: 60px;
+}
+.delete-btn,
+.like-btn {
+  display: inline-block;
+  Cursor: pointer;
+}
+.delete-btn {
+  width: 18px;
+  height: 17px;
+  background: url(&quot;delete-icn.svg&quot;) no-repeat center;
+}
+
+.quantity {
+  padding-top: 20px;
+  margin-right: 60px;
+}
+.quantity input {
+  -webkit-appearance: none;
+  border: none;
+  text-align: center;
+  width: 32px;
+  font-size: 16px;
+  color: #43484D;
+  font-weight: 300;
+}
+ 
+button[class*=btn] {
+  width: 30px;
+  height: 30px;
+  background-color: #F0F0F0;
+  border-radius: 19px;
+  border: none;
+  cursor: pointer;
+}
+.minus-btn img {
+  margin-bottom: 3px;
+}
+.plus-btn img {
+  margin-top: 2px;
+}
+ 
+
+.cart-item ul {
+  display: flex;
+  padding: 25px 0px 15px 30px;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.cart-item li {
+  height: 100px;
+  width: 140px;
+}
+
+.cart-item li p {
+  padding-top: 15px;
+}
+
+.cart-item ul li img {
+  height: 100px;
+  width: 100px;
+}
+
+.promo-checkout {
+  display: flex;
+  padding-bottom: 20px;
+}
+
+.promo-checkout ul {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 75%;
+}
+
+.promo-checkout ul li h2 {
+  font-size: 16px;
+  color: #43484D;
+}
+
+.promo-checkout ul li a {
+  padding: 0;
+}
+
+.price{
+  align-items: center
+}
+
+.productbtn{
+  padding-left:39px
+}
+
